# jacho

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
dev/: 0 - baseline data.ipynb  1 - diagonal.ipynb  2 - efficient implementation.ipynb  3 - last adjustments trainnig.ipynb  4 - horizontal.ipynb  4.1 - getting offsets right.ipynb  5 - predicting.ipynb  5.1 - predicting_test.ipynb  5.2 - recursive_prediction.ipynb  6 - diff_hyperparams.ipynb  building_flax.ipynb  diagonal_approach.ipynb  recurrent_kernel.py
examples/: KS.ipynb  comparing_reservoirs.ipynb  parallel_reservoirs.ipynb
src/jacho/data/: KS.py
src/jacho/layers/: activation.py  output.py  reservoirs.py  utils.py
src/jacho/layers/reservoirs/: __init__.py  random.py  sparse.py  structured.py
src/jacho/models/: generic.py  prebuild.py
src/jacho/recurrent_kernel/: __init__.py  kernels.py  recurrent_kernel.py  train.py  utils.py
src/jacho/sparse/: COO.py  ops.py
src/jacho/training/: training.py
tests/: testing_sparse.py
